# StarPU-Inference-Server

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  a.out  install_hooks.sh  sonar-project.properties
src/grpc/: CMakeLists.txt
src/grpc/client/: CMakeLists.txt  client_args.cpp  client_args.hpp  client_main.cpp  inference_client.cpp  inference_client.hpp
src/grpc/server/: CMakeLists.txt  inference_service.cpp  inference_service.hpp  inference_service_async.cpp  inference_service_async_coordination.inc  inference_service_async_coordination_helpers.inc  inference_service_async_lifecycle.hpp  inference_service_async_lifecycle.inl  inference_service_async_server.cpp  inference_service_async_server.hpp  inference_service_async_server.inc  inference_service_async_server.inl  inference_service_internal.hpp  inference_service_io.cpp  inference_service_io_validation.inl  inference_service_metadata.cpp  inference_service_rpc_infer.hpp  inference_service_rpc_infer.inl  inference_service_rpc_metadata.hpp  inference_service_rpc_metadata.inc  inference_service_rpc_metadata.inl  inference_service_runtime_internal.hpp  inference_service_test_accessor.cpp  inference_service_test_api.hpp  inference_service_test_forwarders.inc  inference_service_test_internal.cpp  inference_service_test_internal.hpp  inference_service_validation_convert.inc  server_main.cpp  server_main_bootstrap.hpp  server_main_bootstrap.inl  server_main_override_slot.hpp  server_main_python_test_overrides.hpp  server_main_python_test_overrides.inc  server_main_shutdown_runtime.hpp  server_main_shutdown_runtime.inl  server_main_signal_runtime.hpp  server_main_test_api.hpp  server_main_trace_plot_runtime.hpp  server_main_trace_plot_runtime.inl  (+11 more)
src/proto/: CMakeLists.txt  grpc_service.proto  inference.proto  model_config.proto
tests/: CMakeLists.txt  starpu_runtime_guard.hpp  test_args_parser.cpp  test_cli_main.cpp  test_client_utils.cpp  test_datatype_utils.cpp  test_device_type.cpp  test_helpers.hpp  test_inference_queue.cpp  test_inference_runner.cpp  test_inference_runner_errors.cpp  test_inference_runner_helpers.cpp  test_inference_runner_utils.cpp  test_inference_service.cpp  test_inference_service_impl_methods.cpp  test_inference_service_validation.cpp  test_inference_task.cpp  test_inference_task_errors.cpp  test_inference_task_lifecycle.cpp  test_inference_task_limits.cpp  test_inference_task_registration.cpp  test_inference_task_utils.cpp  test_inference_validator.cpp  test_input_generator.cpp  test_input_generator_utils.cpp  test_log_exception.cpp  test_logger.cpp  test_run_codelet_inference.cpp  test_run_inference.cpp  test_starpu_setup.cpp  test_starpu_setup_codelet.cpp  test_starpu_task_runner.cpp  test_tensor_builder.cpp  test_tensor_builder_from_starpu.cpp  test_time_utils.cpp  test_transparent_hash.cpp  test_warmup_runner.cpp  test_warmup_runner_edges.cpp
tests/cli/: cli_test_utils.hpp  cli_tests.cpp  test_args_parser.cpp  test_cli_main.cpp
tests/common/: datatype_test_utils.hpp  test_batching_config.hpp  test_cli.hpp  test_constants.hpp  test_helpers.hpp  test_inference_runner.hpp  test_inference_service.hpp  test_inference_task.hpp  test_inference_validator.hpp  test_input_slot_pool.hpp  test_starpu_setup.hpp  test_starpu_task_runner.hpp  test_utils.hpp  test_warmup_runner.hpp  torch_cuda_device_count_override.hpp
tests/core/: inference_runner_test_utils.hpp  test_inference_queue.cpp  test_inference_runner.cpp  test_inference_runner_errors.cpp  test_inference_runner_helpers.cpp  test_inference_runner_utils.cpp  test_inference_task.cpp  test_inference_task_errors.cpp  test_inference_task_lifecycle.cpp  test_inference_task_limits.cpp  test_inference_task_registration.cpp  test_run_inference.cpp  test_tensor_builder.cpp  test_warmup_runner.cpp  test_warmup_runner_edges.cpp  warmup_runner_test_utils.hpp
tests/e2e/: CMakeLists.txt  test_full_inference.cpp  test_grpc_client_server.cpp  test_run_inference_loop.cpp
tests/e2e/regression/: test_race_shutdown.cpp
tests/e2e/resources/: simple_model.ts
tests/e2e/smoke/: test_full_inference.cpp
tests/grpc/: inference_service_test.hpp  test_client.cpp  test_inference_service.cpp  test_inference_service_impl_methods.cpp  test_inference_service_validation.cpp
tests/integration/: CMakeLists.txt  test_grpc_client_server.cpp  test_run_inference_loop.cpp
tests/integration/cli/: integration_cli.cpp
tests/integration/core/: integration_inference_queue.cpp  integration_inference_runner.cpp  integration_inference_runner_helpers.cpp  integration_inference_task.cpp  integration_inference_task_errors.cpp  integration_inference_task_limits.cpp  integration_run_inference.cpp  integration_run_inference_loop.cpp  integration_tensor_builder.cpp  integration_warmup_runner.cpp
tests/integration/grpc/: integration_grpc_client_server.cpp  integration_inference_client.cpp  integration_inference_service.cpp
tests/integration/starpu/: integration_starpu_setup.cpp  integration_starpu_task_runner.cpp  integration_tensor_builder_from_starpu.cpp
tests/integration/utils/: integration_client_utils.cpp  integration_datatype_utils.cpp  integration_input_generator.cpp  (+5 more)
tests/nvtx3/: nvToolsExt.h
tests/starpu/: starpu_runtime_guard.hpp  test_starpu_setup.cpp  test_starpu_setup_codelet.cpp  test_starpu_task_runner.cpp  test_tensor_builder_from_starpu.cpp  test_utils.hpp
tests/support/: inference_task_test_hooks.hpp  input_slot_pool_test_hooks.hpp  output_slot_pool_test_hooks.cpp  output_slot_pool_test_hooks.hpp  starpu_data_interface_override.cpp  starpu_data_interface_override.hpp  starpu_task_submit_override.cpp  starpu_task_submit_override.hpp  torch_cuda_device_count_override.cpp
tests/unit/: CMakeLists.txt
tests/utils/: inference_validator_test_utils.hpp  test_client_utils.cpp  test_datatype_utils.cpp  test_device_type.cpp  test_inference_validator.cpp  test_input_generator.cpp  test_log_exception.cpp  test_logger.cpp  test_time_utils.cpp  test_transparent_hash.cpp
(+306 files in other folders)
